feat: update OpenAPI documentation configuration and add tags to controllers